# plasma

./: .gitignore  Dockerfile  KNOWN_BUGS  Makefile  README.md  check.sh  diff.sh  install.sh  regen.sh  requirements.sh  requirements.txt  reverse.py  run_plasma.py  run_reverse.py  setup.cfg  setup.py  test_plasma.py  test_reverse.py
d3/: dagre-d3.js  index.html
lib/: __init__.py  analyzer.py  ast.py  binary.py  colors.py  context.py  database.py  disassembler.py  elf.py  exceptions.py  generate_ast.py  graph.py  interactive.py  memory.py  output.py  paths.py  pe.py  pefile2.py  readline.py  reverse.py  utils.py  vim.py  visual.py
lib/fileformat/: binary.py  elf.py  pe.py  pefile2.py  raw.py
lib/ui/: console.py  inlineed.py  vim.py  visual.py  visualdecompile.py  window.py
plasma/: main.py
plasma/lib/: __init__.py  analyzer.py  api.py  ast.py  colors.py  consts.py  custom_colors.py  database.py  disassembler.py  exceptions.py  generate_ast.py  graph.py  memmap.py  memory.py  output.py  utils.py
plasma/scripts/: asm.py  crypto.py  disasm.py  (+1 more)
reverse/: main.py
scripts/: crypto.py  strings.py  xrefsto.py
tests/: .malloc.bin.db  and1.c  and1.rev  and2.c  and2.rev  and3.c  and3.rev  and4.c  and4.rev  andor1.c  andor1.rev  andor2.c  andor2.rev  andor3.c  andor3.rev  andor4.c  andor4.rev  andor5.c  andor5.rev  andor6.c  andor6.rev  break1.c  break1.rev  break2.c  break2.rev  break3.c  break3.rev  canary_plt.c  canary_plt.rev  chars1.c  chars1.rev  continue1.c  continue1.rev  continue2.c  continue2.rev  continue3.c  continue3.rev  data1.c  data1.rev  diff.sh  (+145 more)
(+113 files in other folders)
