[metadata]
name = plasma
version = 1.0
license = GPL-3.0
description = plasma disassembler for x86/ARM/MIPS
url = https://github.com/joelpx/plasma

[options]
install_requires = pefile; pyelftools; msgpack; capstone
packages= plasma, plasma.lib, plasma.lib.arch, plasma.lib.arch.x86, plasma.lib.arch.mips, plasma.lib.arch.arm, plasma.lib.ui, plasma.lib.fileformat, plasma.lib.fileformat.relocations, plasma.scripts

[options.entry_points]
console_scripts = plasma = plasma.main:console_entry
